finishing the first part of the project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="">Marques <span>•</span> Burger</a>
+          <a href="">Lidy <span>•</span> Burger</a>
         </div>
         <nav>
           <ul class="leftside">
@@ -71,5 +71,82 @@
         </div>
       </div>
     </section>
+    <main>
+      <div class="container">
+        <div class="products-grid">
+          <a href="" class="product-item">
+            <div class="warning">Promoção</div>
+            <div class="photo">
+              <img src="./assets/burgers/burger1.png" alt="" />
+            </div>
+            <div class="info">
+              <div class="product-category">Tradicional</div>
+              <div class="product-name">Texas Burger</div>
+              <div class="product-price">R$ 25,50</div>
+            </div>
+          </a>
+          <a href="" class="product-item">
+            <div class="photo">
+              <img src="./assets/burgers/burger2.png" alt="" />
+            </div>
+            <div class="info">
+              <div class="product-category">Tradicional</div>
+              <div class="product-name">Texas Burger</div>
+              <div class="product-price">R$ 25,50</div>
+            </div>
+          </a>
+          <a href="" class="product-item">
+            <div class="photo">
+              <img src="./assets/burgers/burger3.png" alt="" />
+            </div>
+            <div class="info">
+              <div class="product-category">Tradicional</div>
+              <div class="product-name">Texas Burger</div>
+              <div class="product-price">R$ 25,50</div>
+            </div>
+          </a>
+          <a href="" class="product-item">
+            <div class="photo">
+              <img src="./assets/burgers/burger4.png" alt="" />
+            </div>
+            <div class="info">
+              <div class="product-category">Tradicional</div>
+              <div class="product-name">Texas Burger</div>
+              <div class="product-price">R$ 25,50</div>
+            </div>
+          </a>
+          <a href="" class="product-item">
+            <div class="photo">
+              <img src="./assets/burgers/burger1.png" alt="" />
+            </div>
+            <div class="info">
+              <div class="product-category">Tradicional</div>
+              <div class="product-name">Texas Burger</div>
+              <div class="product-price">R$ 25,50</div>
+            </div>
+          </a>
+          <a href="" class="product-item">
+            <div class="photo">
+              <img src="./assets/burgers/burger2.png" alt="" />
+            </div>
+            <div class="info">
+              <div class="product-category">Tradicional</div>
+              <div class="product-name">Texas Burger</div>
+              <div class="product-price">R$ 25,50</div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="logo">
+          <a href="">Lidy <span>•</span> Burger</a>
+        </div>
+        <div class="copyrights">
+          criado por Jailson no curso <a href="">B7Web</a>.
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
